@@ -26,7 +26,9 @@ export JAVA_HOME
 export JAVA="$JAVA_HOME/bin/java"
 export DEFAULT_SEARCH_LOCATIONS="classpath:/,classpath:/config/,file:./,file:./config/"
 
-JAVA_OPT="${JAVA_OPT} -XX:+UseSerialGC -Xms256m -Xmx512m -Xss512k -Dserver.tomcat.max-threads=50"
+export MALLOC_ARENA_MAX=2
+JAVA_OPT="${JAVA_OPT} -XX:+UseSerialGC -Xms256m -Xmx512m -Xss512k -XX:PermSize=128m -XX:MaxPermSize=128m"
+JAVA_OPT="${JAVA_OPT} -Dserver.tomcat.max-threads=30"
 JAVA_OPT="${JAVA_OPT} -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${_base_dir}/java_heapdump.hprof"
 
 mkdir -pv /var/smartmon/
